# ESP32_TRMS_V2.3

./: Doxyfile  platformio.ini
.github/workflows/: doxygen.yml
docs/html/: 128-example.html  160_01x_01128_2RLE__Font__test_2RLE__Font__test_8ino.html  160_01x_01128_2RLE__Font__test_2RLE__Font__test_8ino_source.html  160_01x_01128_2TFT__Char__times_2TFT__Char__times_8ino.html  160_01x_01128_2TFT__Char__times_2TFT__Char__times_8ino_source.html  160_01x_01128_2TFT__Clock_2TFT__Clock_8ino.html  160_01x_01128_2TFT__Clock_2TFT__Clock_8ino_source.html  160_01x_01128_2TFT__Clock__Digital_2TFT__Clock__Digital_8ino.html  160_01x_01128_2TFT__Clock__Digital_2TFT__Clock__Digital_8ino_source.html  160_01x_01128_2TFT__Ellipse_2TFT__Ellipse_8ino.html  160_01x_01128_2TFT__Ellipse_2TFT__Ellipse_8ino_source.html  160_01x_01128_2TFT__Print__Test_2TFT__Print__Test_8ino.html  160_01x_01128_2TFT__Print__Test_2TFT__Print__Test_8ino_source.html  160_01x_01128_2TFT__flash__jpg_2TFT__flash__jpg_8ino.html  (+4478 more)
lib/: lv_conf.h
lib/UI_V2.3/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen10.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.cpp  ui_Screen6.c  ui_Screen7.c  ui_Screen8.c  ui_Screen9.cpp  ui_events.cpp  ui_events.h  ui_helpers.c  ui_img_1208125608.c  ui_img_68877468.c  ui_img_base_y_estructura_principal_150x150_png.c  ui_img_esquema_general_redimensionado_png.c  ui_img_esquema_pid_completo_redimensionado_png.c  ui_img_flecha_verde_girada_png.c  ui_img_imagen_redimensionada_png.c  ui_img_mando_ir_redimensionado_png.c  ui_img_reposo_png.c
src/: main.cpp
(+271 files in other folders)
