SET(SOURCES ui_Screen1.c
    ui_Screen3.c
    ui_Screen4.c
    ui_Screen5.c
    ui_Screen6.c
    ui_Screen2.c
    ui_Screen7.c
    ui_Screen8.c
    ui_Screen10.c
    ui_Screen9.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_reposo_png.c
    ui_img_logo_ugr_redimensionado_png.c
    ui_img_logo_granasat_redimensionado_png.c
    ui_img_tabla_311px_con_textos_png.c
    ui_img_imagen_redimensionada_png.c
    ui_img_esquema_general_redimensionado_png.c
    ui_img_esquema_pid_completo_redimensionado_png.c
    ui_img_68877468.c
    ui_img_1208125608.c
    ui_img_base_y_estructura_principal_150x150_png.c
    ui_img_720150280.c
    ui_img_flecha_verde_girada_png.c
    ui_img_flecha_verde_curvada_50x50_png.c
    ui_img_flecha_verde_invertida_50x50_png.c
    ui_img_logo_ugr_rojo_redimensionado_png.c
    ui_img_mando_ir_redimensionado_png.c)

add_library(ui ${SOURCES})
